samples/_failures_safe/1761171959_e280bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee0ce3b2.c: In function ‘main’:
./samples/SAFE/__tmp_ee0ce3b2.c:145:16: error: ‘EX’ undeclared (first use in this function)
  145 |         return EX
      |                ^~
./samples/SAFE/__tmp_ee0ce3b2.c:145:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ee0ce3b2.c:145:18: error: expected ‘;’ at end of input
  145 |         return EX
      |                  ^
      |                  ;
./samples/SAFE/__tmp_ee0ce3b2.c:145:9: error: expected declaration or statement at end of input
  145 |         return EX
      |         ^~~~~~
./samples/SAFE/__tmp_ee0ce3b2.c:145:9: error: expected declaration or statement at end of input
